# aterm

./: .gitignore  CLAUDE.md  LICENSE  README.md  ideas.md  index.html  package-lock.json  package.json  tailwind.config.ts
.claude/skills/release/: SKILL.md
docs/plans/: auto-updater.md  notifications-and-session-status.md
scripts/: release.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: directory.rs  lib.rs  notify.rs  pty.rs  ssh.rs  window.rs  worktree.rs
src/addons/: StatusAddon.ts
src/components/: AddProjectModal.tsx  CreateTaskModal.tsx  DetachedPaneView.tsx  DetachedProjectView.tsx  ExitConfirmDialog.tsx  NewTerminalModal.tsx  NotificationManager.tsx  PaneHeader.tsx  ProjectSettingsModal.tsx  ProjectSidebar.tsx  SettingsModal.tsx  StatusBar.tsx  TaskView.tsx  TerminalLayout.tsx  TerminalPane.tsx  TransientTerminalView.tsx  WindowShell.tsx
src/components/add-project/: DirectoryBrowser.tsx  LayoutPreview.tsx  ProjectFormFields.tsx  RemoteExecutionSection.tsx  index.ts  types.ts
src/components/git/: CommitForm.tsx  CommitHistory.tsx  CommitItem.tsx  DiffViewer.tsx  FileChanges.tsx  FileItem.tsx  GitPane.tsx  GitPanelTabs.tsx  index.ts
src/components/settings/: SSHConnectionsTab.tsx  index.ts
src/components/terminal-layout/: MinimizedPanesDock.tsx  RowWithResizer.tsx  SortablePane.tsx  index.ts  types.ts
src/components/terminal-pane/: index.ts  terminal-instance.ts
src/context/: SessionContext.tsx  ThemeContext.tsx
src/hooks/: index.ts  useDetachedWindows.ts  useKeyboardShortcuts.ts  useLayoutDragDrop.ts  useNotifications.ts  useRemoteValidation.ts  useTerminalInstance.ts  useTerminalKeyboard.ts  useTransientTerminals.ts
src/lib/: clipboard-provider.ts  config.ts  git.ts  layouts.ts  profiles.ts  providers.ts  ssh.ts  status-patterns.ts  tasks.ts  themes.ts  transient.ts
src/styles/: globals.css
(+5 files in other folders)
