[package]
name = "aterm"
version = "0.1.19"
description = "Agent-focused terminal workspace"
authors = ["Saad Naveed"]
license = "MIT"
repository = "https://github.com/saadnvd1/aterm"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
base64 = "0.22"
plist = "1.6"
